// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse complex grammar (num+num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <(>(</(>
|  |  |  |  <Expr>
|  |  |  |  |  <Term>
|  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  </Factor>
|  |  |  |  |  |  <TermP>
|  |  |  |  |  |  </TermP>
|  |  |  |  |  </Term>
|  |  |  |  |  <ExprP>
|  |  |  |  |  |  <+>+</+>
|  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  </Term>
|  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  </ExprP>
|  |  |  |  |  </ExprP>
|  |  |  |  </Expr>
|  |  |  |  <)>)</)>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num>num</num>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  |  <+>+</+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num>num</num>
|  |  |  |  </Factor>
|  |  |  |  <TermP>
|  |  |  |  </TermP>
|  |  |  </Term>
|  |  |  <ExprP>
|  |  |  </ExprP>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num+(num-num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num>num</num>
|  |  |  </Factor>
|  |  |  <TermP>
|  |  |  </TermP>
|  |  </Term>
|  |  <ExprP>
|  |  |  <+>+</+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num>num</num>
|  |  |  |  </Factor>
|  |  |  |  <TermP>
|  |  |  |  </TermP>
|  |  |  </Term>
|  |  |  <ExprP>
|  |  |  |  <+>+</+>
|  |  |  |  <Term>
|  |  |  |  |  <Factor>
|  |  |  |  |  |  <(>(</(>
|  |  |  |  |  |  <Expr>
|  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  |  |  <->-</->
|  |  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  |  <TermP>
|  |  |  |  |  |  |  |  |  </TermP>
|  |  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  |  <ExprP>
|  |  |  |  |  |  |  |  </ExprP>
|  |  |  |  |  |  |  </ExprP>
|  |  |  |  |  |  </Expr>
|  |  |  |  |  |  <)>)</)>
|  |  |  |  |  </Factor>
|  |  |  |  |  <TermP>
|  |  |  |  |  </TermP>
|  |  |  |  </Term>
|  |  |  |  <ExprP>
|  |  |  |  </ExprP>
|  |  |  </ExprP>
|  |  </ExprP>
|  </Expr>
</Root>
"
`;
